%% HBnB - Task 10, point 4: "Test Your Understanding"
%% Extension of the schema with a BOOKING entity, showing how a new
%% table would relate to the existing USER and PLACE tables.
%%
%% A BOOKING is a one-to-many child of both USER and PLACE:
%%   - one USER can make many bookings, each booking belongs to one user
%%   - one PLACE can receive many bookings, each booking is for one place
%% This is the same 1:N pattern already used by REVIEW, which is why the
%% notation is identical.

erDiagram
    USER ||--o{ PLACE : "owns"
    USER ||--o{ REVIEW : "writes"
    USER ||--o{ BOOKING : "makes"
    PLACE ||--o{ REVIEW : "receives"
    PLACE ||--o{ BOOKING : "is booked in"
    PLACE }o--o{ AMENITY : "has"

    USER {
        string id PK "UUID4"
        string first_name
        string last_name
        string email UK
        string password "bcrypt hash"
        boolean is_admin
        datetime created_at
        datetime updated_at
    }

    PLACE {
        string id PK "UUID4"
        string title
        text description
        decimal price
        float latitude
        float longitude
        string owner_id FK "users.id"
        datetime created_at
        datetime updated_at
    }

    REVIEW {
        string id PK "UUID4"
        text text
        int rating "1-5"
        string user_id FK "users.id"
        string place_id FK "places.id"
        datetime created_at
        datetime updated_at
    }

    AMENITY {
        string id PK "UUID4"
        string name UK
        datetime created_at
        datetime updated_at
    }

    PLACE_AMENITY {
        string place_id PK "FK -> places.id"
        string amenity_id PK "FK -> amenities.id"
    }

    BOOKING {
        string id PK "UUID4"
        string user_id FK "users.id"
        string place_id FK "places.id"
        date check_in
        date check_out
        decimal total_price
        string status "pending|confirmed|cancelled"
        datetime created_at
        datetime updated_at
    }
